# Navs-Engine

./: .gitignore  CMakeLists.txt  README  README.md  build.bat  build.sh
lib/gnu/: libSDL3_image.so.0.3.0
src/: game.c  game.h  main.c  menu.c  menu.h  physics.c  physics.h  render.c  render.h  scene.c  scene.h  tilemap.c  tilemap.h  viewport.c  viewport.h  window.c  window.h
src/assets/: assets.c  assets.h  testmap.tiled-session  testtileset.tsx  untitled.tmx
src/data structures/: dynamic_array.h
src/utils/: file_parser.c  file_parser.h
